fixed text overflowing in tips section when screen goes below 1200px wide

--- a/src/components/HomeGrid/HomeGrid.module.scss
+++ b/src/components/HomeGrid/HomeGrid.module.scss
@@ -9,7 +9,7 @@
 
 .grid_container_bottom {
   display: grid;
-  grid-template-columns: 2fr 3fr 1.5fr;
+  grid-template-columns: 1.5fr 3fr 1.5fr;
   grid-template-rows: 40vh;
 }
 
