--- a/src/components/TipGridSection/TipGridSection.module.scss
+++ b/src/components/TipGridSection/TipGridSection.module.scss
@@ -15,13 +15,13 @@ p {
 }
 
 .section_container > h3 {
-  font-size: 30px;
+  font-size: 25px;
   font-weight: 800;
   width: 90%;
 }
 
 .section_container > p {
-  font-size: 20px;
+  font-size: 15px;
   font-weight: 500;
   width: 80%;
   letter-spacing: 1.5px;
